move stuff to openapi
